# quest

./: Dockerfile  README.md  railway.toml
.github/workflows/: build-and-push.yml
backend/: .env.example  Cargo.toml  Dockerfile  README.md
backend/migration/src/: lib.rs  m20220101_000001_create_table.rs  m20220101_000001_create_tables.rs  m20250730_234518_store_name.rs  m20250730_234907_require_name.rs  m20250731_020813_add_trade_status.rs  m20250731_023602_replace_trade_with_transaction.rs  m20250804_211352_add_geolocation_data.rs  m20250811_032036_remove_reward_slug.rs  m20250815_202506_add_admin_field.rs
backend/src/: auth.rs  doc.rs  lib.rs  main.rs  serve.rs
backend/src/cache/: manager.rs  mod.rs  wrappers.rs
backend/src/entities/: challenges.rs  completion.rs  mod.rs  prelude.rs  reward.rs  trade.rs  transaction.rs  user.rs
backend/src/handlers/: admin.rs  challenges.rs  completion.rs  journal.rs  leaderboard.rs  mod.rs  rewards.rs  trade.rs  transaction.rs  user.rs
backend/src/middleware/: admin.rs
backend/src/services/: challenge.rs  completion.rs  leaderboard.rs  mod.rs  reward.rs  storage.rs  trade.rs  traits.rs  transaction.rs  user.rs
frontend/: .env.example  .gitignore  Dockerfile  README.md  biome.json  components.json  index.html  nginx.conf  package-lock.json  package.json  tsconfig.json  vercel.json  vite.config.ts
frontend/dev-dist/: sw.js
frontend/public/.well-known/: apple-app-site-association  assetlinks.json
frontend/src/: main.css  main.tsx  routeTree.gen.ts
frontend/src-tauri/: Cargo.toml  tauri.conf.json
frontend/src-tauri/capabilities/: default.json  mobile.json
frontend/src-tauri/src/: lib.rs  main.rs
frontend/src/assets/: icons.json
frontend/src/components/: auth.tsx  bottom-navbar.tsx  category-progress-bar.tsx  category-tabs.tsx  category.tsx  challenge-card.tsx  challenge-circle.tsx  challenge-drawer.tsx  challenge-print-full.tsx  challenge-print.tsx  challenges-menu.tsx  filter-card.tsx  info-dialog.tsx  leaderboard-card.tsx  mode-pill.tsx  navbar.tsx  page-header.tsx  page-layout.tsx  prize-card.tsx  scotty-coin.tsx  stamps.tsx  verification-card.tsx
frontend/src/lib/: api-context.tsx  api.ts  app-context.tsx  auth.ts  categories.ts  challenge-api.ts  challenge-data.ts  deep-link.ts  schema.gen.ts  style-context.tsx  types.ts  utils.ts
frontend/src/routes/: __root.tsx  _layout.about.tsx  _layout.leaderboard.tsx  _layout.profile.tsx  _layout.terrier-trade.tsx  _layout.tsx  about.tsx  camera-test.tsx  challenge-demo.tsx  challenges.tsx  corners.tsx  dorm-select.tsx  index.tsx  leaderboard.tsx  login.tsx  onboarding.tsx  profile.tsx  terrier-trade.tsx  trade.tsx  verify.tsx
qr-code-gen/: .env.example  .gitignore  Dockerfile  README.md  index.html  nginx.conf  package.json  tsconfig.app.json  vite.config.ts
qr-code-gen/src/: App.tsx  main.css  main.tsx
(+83 files in other folders)
