[package]
name = "backend"
version = "0.1.0"
license = "MIT OR Apache-2.0"
edition = "2024"

[[bin]]
name = "seed"
path = "src/bin/seed.rs"

[dependencies]
axum = { version = "0.8.4", features = ["macros"] }
base64 = "0.22.1"
chrono = { version = "0.4.41", features = ["serde"] }
csv = "1.3.1"
dotenvy = "0.15.7"
minio = "0.3.0"
sea-orm = { version = "1.1.14", features = [
	"sqlx-postgres",
	"runtime-tokio-rustls",
	"macros",
] }
serde = { version = "1.0.219", features = ["derive"] }
tokio = { version = "1.47.0", features = ["full"] }
tower = "0.5.2"
tower-http = { version = "0.6.6", features = ["cors"] }
tower-oauth2-resource-server = "0.4.5"
utoipa = { version = "5.4.0", features = [
	"axum_extras",
	"chrono",
	"uuid",
	"decimal_float",
] }
utoipa-axum = "0.2.0"
utoipa-swagger-ui = { version = "9.0.2", features = ["axum"] }
uuid = { version = "1.17.0", features = ["v4"] }
